...
        completions."
    </string>
    <string name="title_activity_map">MapActivity</string>
    <string name="access_token">pk.eyJ1IjoiYi1tb2xuYXIiLCJhIjoiY2pua285N24zMHVicDN2bDdtcGdwMmg3dCJ9.Ob591D7hqLLQooWWklnS8Q</string>
    <!--Login and Sign up Form-->
    <string name="login">Login/Sign Up</string>
    <string name="login_signup_button_text">Login</string>
    <string name="login_form_title">Login</string>
    <string name="title_activity_login_signup">LoginSignupActivity</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_e_mail">Confirm E-mail</string>
...
